revert back min-width for smaller icons sizes to prevent Value number being overlapped

--- a/src/qlik-multi-kpi.less
+++ b/src/qlik-multi-kpi.less
@@ -72,18 +72,6 @@
   .ui.segment{
     &.infographics{
       min-width: 170px !important;
-      &.mini{
-        min-width: 110px !important;
-
-      }
-      &.tiny{
-        min-width: 120px !important;
-
-      }
-      &.small{
-        min-width: 145px !important;
-
-      }
       &.normal{
         min-width: 200px !important;
 
